--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -14,7 +14,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: $blackColor;
-  overflow-x: hidden;
 }
 
 button {
